# cpp-http-server

./: .gitignore  CMakeLists.txt
CPPHttpServer/: CPPHttpServer.sln  CPPHttpServer.vcxproj  CPPHttpServer.vcxproj.filters
CPPHttpServer/CPPHttpServer/x64/Release/: CPPHttpServer.exe.recipe  CPPHttpServer.iobj  CPPHttpServer.ipdb
CPPHttpServer/CPPHttpServer/x64/Release/CPPHttpServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPPHttpServer.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Server.h
src/: Server.cpp
